@@ -4,14 +4,13 @@
     Copyright (C) 2020-2022 Confluent, Inc.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.confluent.parallelconsumer</groupId>
     <artifactId>parallel-consumer-parent</artifactId>
     <name>Confluent Parallel Consumer</name>
-    <version>0.5.0.0-SNAPSHOT</version>
+    <version>0.5.2.0-SNAPSHOT</version>
     <description>Parallel Apache Kafka client wrapper with client side queueing, a simpler consumer/producer API with key concurrency and extendable non-blocking IO processing.
     </description>
     <url>http://confluent.io</url>
@@ -56,6 +55,7 @@
         <connection>scm:git:git://github.com:confluentinc/parallel-consumer.git</connection>
         <developerConnection>scm:git:git@github.com:confluentinc/parallel-consumer.git</developerConnection>
         <url>https://github.com/confluentinc/parallel-consumer.git</url>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
@@ -70,6 +70,9 @@
     </distributionManagement>
 
     <properties>
+        <source.version>17</source.version>
+        <release.target>8</release.target>
+
         <!-- when running mvn locally from cmd line, use default jvm for jvm8 - by default uses the runtime JVM -->
         <jvm.location>${java.home}</jvm.location>
         <jvm8.location>-insert jvm8 location via environment variable-</jvm8.location>
@@ -80,8 +83,6 @@
 
         <!-- standard props -->
         <maven.version>3.6.3</maven.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -92,7 +93,7 @@
         <!-- version numbers -->
         <!-- plugins -->
         <mycila.version>4.2.rc3</mycila.version>
-        <lombok.version>1.18.22</lombok.version>
+        <lombok.version>1.18.24</lombok.version>
         <auto-service.version>1.0.1</auto-service.version>
         <surefire.version>3.0.0-M6</surefire.version>
 
@@ -107,12 +108,12 @@
         <!-- tests deps-->
         <junit.version>5.8.2</junit.version>
         <junit.platform.version>1.8.2</junit.platform.version>
-        <testcontainers.version>1.16.3</testcontainers.version>
+        <testcontainers.version>1.17.1</testcontainers.version>
         <truth.version>1.1.3</truth.version>
         <flogger.version>0.7.4</flogger.version>
-        <mockito.version>4.4.0</mockito.version>
-        <!-- todo lock -->
-        <truth-generator-maven-plugin.version>0.1-SNAPSHOT</truth-generator-maven-plugin.version>
+        <mockito.version>4.5.1</mockito.version>
+        <truth-generator-maven-plugin.version>0.1.1-SNAPSHOT</truth-generator-maven-plugin.version>
+        <jabel.version>0.4.2</jabel.version>
     </properties>
 
     <profiles>
@@ -131,12 +132,11 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
                             <!-- override source and target when working from IDE -->
-                            <source>13</source>
-                            <target>13</target>
-                            <release>13</release>
-                            <!-- disable jabel -->
+                            <source>${source.version}</source>
+                            <target>${source.version}</target>
+                            <release>${source.version}</release>
+                            <!-- disable Jabel -->
                             <annotationProcessors>
-                                <annotationProcessor>com.github.bsideup.jabel.JabelJavacProcessor</annotationProcessor>
                                 <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor
                                 </annotationProcessor>
                             </annotationProcessors>
@@ -223,7 +223,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.12</version>
+                        <version>1.6.13</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -345,6 +345,14 @@
             <version>0.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Build dependency -->
+        <dependency>
+            <groupId>com.github.bsideup.jabel</groupId>
+            <artifactId>jabel-javac-plugin</artifactId>
+            <version>${jabel.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -392,15 +400,21 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>31.1-jre</version>
-            </dependency>
-            <dependency>
                 <groupId>com.google.truth.extensions</groupId>
                 <artifactId>truth-java8-extension</artifactId>
                 <version>${truth.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.stubbs.truth</groupId>
+                <artifactId>truth-generator-api</artifactId>
+                <version>${truth-generator-maven-plugin.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>31.1-jre</version>
             </dependency>
             <dependency>
                 <groupId>me.tongfei</groupId>
@@ -440,12 +454,12 @@
                 <groupId>org.junit-pioneer</groupId>
                 <artifactId>junit-pioneer</artifactId>
                 <scope>test</scope>
-                <version>1.6.2</version>
+                <version>1.7.0</version>
             </dependency>
             <dependency>
                 <groupId>com.github.tomakehurst</groupId>
                 <artifactId>wiremock</artifactId>
-                <version>2.32.0</version>
+                <version>2.33.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -460,9 +474,35 @@
         </testResources>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-help-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>show-profiles</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>active-profiles</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.sonatype.ossindex.maven</groupId>
                 <artifactId>ossindex-maven-plugin</artifactId>
                 <version>3.2.0</version>
+                <configuration>
+                    <excludeCoordinates>
+                        <exclude>
+                            <!-- https://github.com/google/guava/issues/4011 -->
+                            <!-- CVE-2020-8908: Files::createTempDir local information disclosure vulnerability #4011 -->
+                            <!-- only used transitively from tests, and is a deprecated function -->
+                            <groupId>com.google.guava</groupId>
+                            <artifactId>guava</artifactId>
+                            <version>31.1-jre</version>
+                        </exclude>
+                    </excludeCoordinates>
+                </configuration>
                 <executions>
                     <execution>
                         <id>audit-dependencies</id>
@@ -487,7 +527,7 @@
             <plugin>
                 <groupId>io.whelk.asciidoc</groupId>
                 <artifactId>asciidoc-template-maven-plugin</artifactId>
-                <version>1.0.18</version>
+                <version>1.0.20</version>
                 <executions>
                     <execution>
                         <id>process</id>
@@ -498,8 +538,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <templateDirectory>./</templateDirectory>
-                    <templateFile>src/docs/README.adoc</templateFile>
+                    <templateDirectory>src/docs/</templateDirectory>
+                    <templateFile>README_TEMPLATE.adoc</templateFile>
                     <outputDirectory>./</outputDirectory>
                     <outputFile>README.adoc</outputFile>
                 </configuration>
@@ -585,14 +625,14 @@
                         <path>
                             <groupId>com.github.bsideup.jabel</groupId>
                             <artifactId>jabel-javac-plugin</artifactId>
-                            <version>0.2.0</version>
+                            <version>${jabel.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <!-- enable language preview features -->
-                    <target>8</target>
-                    <release>8</release>
+                    <source>${source.version}</source>
+                    <target>${release.target}</target>
+                    <release>${release.target}</release>
                     <annotationProcessors>
-                        <annotationProcessor>com.github.bsideup.jabel.JabelJavacProcessor</annotationProcessor>
                         <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor
                         </annotationProcessor>
                     </annotationProcessors>
@@ -639,7 +679,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>0.8.8</version>
                 <executions>
                     <execution>
                         <goals>
@@ -669,7 +709,7 @@
                         <configuration>
                             <rules>
                                 <requireJavaVersion>
-                                    <version>[13,14)</version>
+                                    <version>[${source.version},)</version>
                                 </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>3.6.3</version>
@@ -689,21 +729,16 @@
                                         <exclude>com.github.javafaker</exclude>
                                     </excludes>
                                 </bannedDependencies>
-                                <reactorModuleConvergence/>
-                                <banDuplicatePomDependencyVersions/>
-                                <requireSameVersions/>
+                                <reactorModuleConvergence />
+                                <banDuplicatePomDependencyVersions />
+                                <requireSameVersions />
                                 <requireReleaseDeps>
-                                    <!-- todo false -->
-                                    <onlyWhenRelease>true</onlyWhenRelease>
+                                    <onlyWhenRelease>false</onlyWhenRelease>
                                     <failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
                                     <excludes>
                                         <exclude>io.confluent.parallelconsumer:</exclude>
                                     </excludes>
                                 </requireReleaseDeps>
-                                <!-- todo false -->
-                                <requirePluginVersions>
-                                    <unCheckedPluginList>io.stubbs.truth:truth-generator-maven-plugin</unCheckedPluginList>
-                                </requirePluginVersions>
                             </rules>
                         </configuration>
                     </execution>
@@ -760,12 +795,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.12.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.3.0</version>
             </plugin>
             <plugin>
                 <groupId>org.projectlombok</groupId>
@@ -788,7 +823,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.3.2</version>
+                <version>3.4.0</version>
                 <configuration>
                     <sourcepath>${delombok.output}</sourcepath>
                     <sourcepath>${delombok.output}</sourcepath>
@@ -806,10 +841,8 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
-                            <!-- Jabel marker -->
-                            <additionalJOption>--enable-preview</additionalJOption>
-                            <source>13</source>
-                            <release>13</release>
+                            <source>${source.version}</source>
+                            <release>${source.version}</release>
                             <!-- Source goals - change to true? -->
                             <failOnWarnings>false</failOnWarnings>
                         </configuration>
@@ -856,12 +889,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.9.0</version>
+                    <version>3.12.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.2.2</version>
+                    <version>3.3.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
